# writer-framework

./: .alfred.toml  .buildpacks  .editorconfig  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE.txt  MANIFEST.in  Procfile  README.md  build.sh  mint.json  mypy.ini  package-lock.json  package.json  pyproject.toml  pytest.ini  readme.md  requirements.txt  todo.txt  turbo.json
.devcontainer/: devcontainer.json
.github/: FUNDING.yml
.github/workflows/: ci-e2e.yml  ci-macos.yml  ci-ui-test.yml  ci-ui.yml  ci-windows.yml  ci.yml  doc-notify.yml  docs.yml  e2e.yml  publish.yml  trigger-workflow.py  trigger-workflow.yml
alfred/: apps.py  build.py  ci.py  docs.py  github.py  install.py  npm.py  publish.py  run.py
apps/: reviewapp.py
apps/ai-starter/: main.py  ui.json
apps/ai-starter/.wf/: components-page-0-c0f99a9e-5004-4e75-a6c6-36f17490b134.jsonl  components-root.jsonl
apps/default/: Dockerfile  README.md  main.py  pyproject.toml  ui.json
apps/default/.wf/: components-blueprints_blueprint-0-lfltcky7l1fsm6j2.jsonl  components-blueprints_blueprint-0-t84xyhxau9ej3823.jsonl  components-root.jsonl  metadata.json  (+2 more)
apps/hello/: Dockerfile  main.py  pyproject.toml  test_app.py  ui.json
apps/pdg-tutorial/: main.py
apps/product-description-generator/: README.md  main.py  prompts.py  ui.json
apps/quickstart/: README.md  main.py  pyproject.toml  requirements.txt  ui.json
apps/quickstart/.wf/: components-blueprints_root.jsonl  components-page-0-e8e4m9mx50wfpdty.jsonl  components-root.jsonl  components-workflows_root.jsonl
apps/text-demo/: main.py  ui.json
docs/: mint.json  package-lock.json  package.json
docs/blueprints/: .gitignore
docs/codegen/: core.js  generator_blueprints_pages.py  generator_components_pages.cjs  generator_components_pages.js  generator_components_pages.mjs
docs/components/: .gitignore  component_page.mdx.tpl
docs/docs/: ai-module.md  ai-module.mdx  application-state.md  application-state.mdx  authentication.md  authentication.mdx  backend-driven-ui.md  backend-driven-ui.mdx  backend-initiated-actions.md  backend-initiated-actions.mdx  builder-basics.md  builder-basics.mdx  chat-assistant.mdx  cloud-deploy.md  component-list-link.mdx  component-list.md  components.data.ts  core.ts  custom-components.md  custom-components.mdx  custom-server.md  deploy-with-docker.md  deploy-with-docker.mdx  event-handlers.md  event-handlers.mdx  frontend-scripts.md  frontend-scripts.mdx  getting-started.md  getting-started.mdx  handling-inputs.md  handling-inputs.mdx  index.md  introduction.md  introduction.mdx  modifying-app-ui-through-backend.md  page-routes.md  page-routes.mdx  quickstart-tutorial.md  quickstart-tutorial.mdx  repeater.md  (+8 more)
docs/framework/: ai-module.mdx  application-state.mdx  authentication.mdx  backend-driven-ui.mdx  backend-initiated-actions.mdx  builder-basics.mdx  chat-assistant.mdx  cloud-deploy.mdx  component-list-link.mdx  custom-components.mdx  custom-server.mdx  dataframe.mdx  deploy-with-docker.mdx  event-handlers.mdx  frontend-scripts.mdx  getting-started.mdx  handling-inputs.mdx  introduction.mdx  mint.json  page-routes.mdx  product-description-generator.mdx  quickstart-tutorial.mdx  quickstart.mdx  release-notes-generator.mdx  repeater.mdx  sample-apps.mdx  seo.mdx  sessions.mdx  social-post-generator.mdx  state-schema.mdx  stylesheets.mdx  testing.mdx
docs/tests/: componentImages.spec.js
e2e/: index.js
e2e/tests/: button.spec.ts  components.spec.ts  state.spec.ts
e2e_tests/: .gitignore  index.js  package-lock.json  package.json  playwright.config.ts
e2e_tests/tests/: button.spec.ts  components.spec.ts  componentsBasic.spec.ts  createAndRemove.spec.ts  drag.spec.ts  image.spec.ts  lowCode.spec.ts  reusable.spec.ts  reusableComponents.spec.ts  state.spec.ts  undoRedo.spec.ts
server/: .gitignore  app.py  handlers.py  handlers_backup.vue  streamsync.py  user_script.py  user_script_2.py  user_script_3.py
server/static/: index.html
src/streamsync/: __init__.py  ai.py  app_runner.py  auth.py  command_line.py  core.py  core_ui.py  deploy.py  serve.py  ss_types.py  ui.py  ui_manager.py  ui_utils.py
src/ui/: .eslintrc.cjs  .eslintrc.js  .gitignore  components.codegen.json  components.json  index.html  package.json  tsconfig.json  vite-env.d.ts  vite.config.custom.ts  vite.config.ts  viteStreamsyncPlugin.ts  viteWriterPlugin.ts
src/writer/: __init__.py  abstract.py  agents.py  ai.py  app_runner.py  audit_and_fix.py  auth.py  autogen.py  blueprints.py  cloud_sync.py  command_line.py  core.py  core_df.py  core_ui.py  crypto.py  deploy.py  e2bdataanalysis.py  evaluator.py  logs.py  serializer.py  serve.py  ss_types.py  sync.py  tests.py  ui_manager.py  vault.py  wf_project.py  workflows.py
tests/: __init__.py  conftest.py  test_app_runner.py  test_core.py  test_serve.py  test_ui.py
tests/backend/: __init__.py  test_ai.py  test_app_runner.py  test_audit_and_fix.py  test_auth.py  test_cli.py  test_core.py  test_core_ui.py  test_deploy.py  test_evaluator.py  test_init_state.py  test_middleware.py  test_serializer.py  test_serve.py  test_sync.py  test_ui.py  test_wf_project.py
tests/backend_external/: README.md
tests/e2e/: .gitignore  index.js  package.json  playwright.config.ts
tests/fixtures/: base.py
tests/testapp/: main.py  ui.json
ui/: .eslintrc.cjs  .eslintrc.js  .gitignore  .prettierrc  components.codegen.json  components.json  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.reset.css  tsconfig.json  uno.global.js  vite-env.d.ts  vite.config.custom-components.js  vite.config.custom.js  vite.config.js  vite.config.ts  viteStreamsyncPlugin.ts
ui/src/: App.vue  ambientTypes.ts  injectionKeys.ts  main.js  main.ts  streamsync.js  streamsyncTypes.ts  templateMapping.js
ui/tests/: button.spec.ts  createAndRemove.spec.ts  image.spec.ts
ui/tools/: component_page.tpl.md  core.js  generator.js  generator_doc_components_page.js  generator_python_ui.js  generator_ui_component_json.js  getComponents.ts
ui_test_app/: index.js  package-lock.json  package.json
(+1033 files in other folders)
