[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "writer"
version = "0.8.0rc1"
description = "An open-source, Python framework for building feature-rich apps that are fully integrated with the Writer platform."
authors = ["Writer, Inc."]
readme = "README.md"
homepage = "https://www.writer.com"
repository = "https://www.github.com/streamsync-cloud/streamsync"
documentation = "https://dev.writer.com/framework"
keywords = ["data apps", "gui", "ui", "framework", "writer framework"]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 4 - Beta"
]
packages = [
    { include = "writer", from = "src" }
]
include = [
    "src/writer/*.py",
    "src/writer/static/**/*",
    "src/writer/templates/**/*",
    "src/writer/app_templates/**/*"
]

[tool.poetry.dependencies]
authlib = "^1.3.0"
click = "^8.1.7"
fastapi = ">= 0.89.1, < 1"
gitignore-parser = "^0.1.11"
jinja2 = "^3.1.4"
pandas = ">= 2.2.0, < 3"
plotly = ">= 5.18.0, < 6"
pyarrow = ">= 15.0.0, < 16.0.0"
pydantic = ">= 2.6.0, < 3"
python = ">=3.9.2, <4.0"
python-dateutil = "^2.9.0.post0"
pytz = "^2024.1"
requests = "^2.31.0"
uvicorn = ">= 0.20.0, < 1"
watchdog = ">= 3.0.0, < 4"
websockets = ">= 12, < 13"
writer-sdk = ">= 1.2.0, < 2"
python-multipart = ">=0.0.7, < 1"


[tool.poetry.group.build]
optional = true

[tool.poetry.group.build.dependencies]
alfred-cli = "^2.2.7"
altair = ">= 5.2.0, < 6"
httpx = ">=0.26.0, < 1"
mypy = ">= 1.8.0, < 2"
pandas = ">= 2.2.0, < 3"
pandas-stubs = ">= 2.0.0, <3"
plotly = ">= 5.18.0, < 6"
polars = "^0.20.15"
pyarrow = ">= 15.0.0, < 16.0.0"
pytest = ">= 7.0.0, < 8"
pytest-asyncio = ">= 0.23.4, < 1"
ruff = "^0.3.4"
types-requests = "^2.31.0.20240406"


[tool.poetry.group.dev.dependencies]
types-python-dateutil = "^2.9.0.20240316"

[tool.poetry.scripts]
writer = 'writer.command_line:main'


[tool.ruff]
exclude = [
    "src/ui",
		"src/writer/ui.py",
    "docs",
    "tests/e2e",
    ".git",
]

line-length = 100
indent-width = 4
target-version = "py39"

[tool.ruff.lint]
select = ["I","E", "F", "C"]
ignore = ["E501", "C901", "E712", "F401"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


